--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -79,7 +79,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: capricious_counterfeiter_production
-  username: capricious_counterfeiter
-  password: <%= ENV['capricious_counterfeiter_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
