add gems, setup initializers reorganize for test case usage

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,2 @@
-DATABASE_URL=postgres:///capricious_counterfeiter_test
+DATABASE_URL=postgres://localhost/capricious_counterfeiter_test
+RAILS_ENV=test
